# api_jcot_v2

./: .gitignore  pyproject.toml
src/: .env.example  main.py  models.py
src/Services/: FundosPorCnpj.py  __init__.py
src/Services/JCOTSERVICE/: ConsultaMovimentoPeriodoV2Service.py  ManClienteService.py  ManCotistaV2Service.py  RelPosicaoCotistaService.py  RelPosicaoFundoCotistaService.py
