[project]
name = "api-jcot-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "Thiago Gomes",email = "tt7.thiago@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "mysql (>=0.0.3,<0.0.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
